tests/baselines/reference/crashIntypeCheckInvocationExpression.errors.txt
crashIntypeCheckInvocationExpression.ts(6,28): error TS2095: Could not find symbol 'task'.
crashIntypeCheckInvocationExpression.ts(8,18): error TS2095: Could not find symbol 'path'.
crashIntypeCheckInvocationExpression.ts(9,24): error TS2158: Untyped function calls may not accept type arguments.
crashIntypeCheckInvocationExpression.ts(10,50): error TS2095: Could not find symbol 'moduleType'.
